--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -553,7 +553,48 @@ of a dynamically screened Fock-exchange term.
 %   \lim_{i\omega_n\rightarrow 0}  \frac{\partial}{\partial i\omega_n}G^{\sigma}_{k}(i\omega_n-i\nu_j) \right]   
 % \end{align}
 
+\subsection{High-frequency correction for GW-DC 1}
+When evaluating the frequency sum for the doublecounting in the form 
+\begin{align}
+  \Sigma_m^{\sigma}(i\omega_n) 
+%
+  &= -\frac{1}{\beta}\sum_k \sum_{j}
+   \braket{m k | W(i\nu_j)|k m}G^{\sigma}_{k}(i\omega_n-i\nu_j)
+   \mathrm{e}^{-i\nu_j \Delta}
+\end{align}
+the convergence is quite fast but still needs to be corrected
+for the high-frequency parts.
+We use a high-frequency form to fit the Green's function and interaction
+given by
+\begin{align}
+ W(i\nu_n)    &\approx w_0 + \frac{w_2}{(i\nu_n)^2} \ \in \mathbb{R} \\
+ G(i\omega_n) &\approx  \frac{1}{i\omega_n} + \frac{g_2}{(i\omega_n)^2} 
+\end{align}
+We need to evaluate the following high-frequency form (orbital/spin etc indices
+are suppressed)
+\begin{align}
+& -\frac{1}{\beta}\sum_j 
+  \left( w_0 + \frac{w_2}{(i\nu_j)^2} \right)
+  \left( \frac{1}{i\omega_n-i\nu_j} + \frac{g_2}{(i\omega_n-i\nu_j)^2} \right)
+   \mathrm{e}^{-i\nu_j \Delta} \\
+% 
+&= -\frac{1}{\beta} \sum_{j}
+\left( 
+  \frac{w_0}{i\omega_n-i\nu_j} + \frac{w_0 g_2}{(i\omega_n-i\nu_j)^2}
++ \frac{w_2}{(i\nu_j)^2(i\omega_n-i\nu_j)} + \frac{w_2g_2}{(i\nu_j)^2(i\omega_n-i\nu_j)^2}
+\right)
+\mathrm{e}^{-i\nu_j \Delta}.
+\end{align}
+Evaluating the terms analytically we get for the first term
+\begin{align}
+   -\frac{1}{\beta}\sum_j \frac{w_0}{i\omega_n-i\nu_j}\mathrm{e}^{-i\nu_j \Delta}
+&= -\frac{w_0}{\beta}\sum_j \frac{1}{i\omega'_j}\mathrm{e}^{-(i\omega_n-i\omega'_j) \Delta} \\
+&= -\frac{w_0}{\beta}\mathrm{e}^{-i\omega_n \Delta}\sum_j \frac{1}{i\omega'_j}\mathrm{e}^{i\omega'_j \Delta} \\
+&= -\frac{w_0}{2}.
+\end{align}
 
+
+\subsection{High-frequency correction for GW-DC 2}
 When evaluating the doublecounting factor
 \begin{align}
 \Sigma^{GW,DC} &= -G^{0,\mathrm{loc},L}W^{0,\mathrm{loc},L},
