started freqdep comparison

--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -2099,6 +2099,26 @@ for odd/even numbers!)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Dependence on GW frequency mesh}
+\begin{figure}[h]
+\includegraphics[width=0.75\textwidth]{figs/freqdep/NiO_fcomp_DOS.pdf}\\
+\includegraphics[width=0.49\textwidth]{figs/freqdep/NiO_fcomp_sigmai.pdf}
+\includegraphics[width=0.49\textwidth]{figs/freqdep/NiO_fcomp_sigmar.pdf}
+\caption{Top: The GW quasiparticle DOS for NiO with different number of
+frequenices used for sampling the Polarization/Selfenergy.
+Bottom: The resulting selfenergy for different number of frequencies. In the imaginary
+part the Selfenergy at the Gamma point for the $e_g$ orbitals is shown, while
+in the real part it is shown at the X point for the first $e_g$ orbital.}
+\label{fig:gw_freqdep_comp}
+\end{figure}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Causality constraint}
 
 \textbf{Definition:}
